--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <script>
     const BOT_CLIENT_ID = "1360270113001177118";
-    const BOT_TOKEN = "MTM2MDI3MDExMzAwMTE3NzExOA.G065MD.A7EA2cXd5So6BaZhnq7TuliJjP1Luq9huctPeA";
+    const BOT_TOKEN = "MTM2MDI3MDExMzAwMTE3NzExOA.G4RNS7.rY9CrwvX8ULAedi4RKQ73mBvNxGFQVEWJDVyEA";
 
     document.getElementById("invite-form").addEventListener("submit", function(e) {
       e.preventDefault();
