--- a/index.html
+++ b/index.html
@@ -1,39 +1,103 @@
+# إنشاء ملف HTML واحد بناءً على طلب المستخدم
+html_code = """
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>دعوة البوت</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>تسجيل الدخول - ProBot</title>
   <style>
-    body { font-family: sans-serif; text-align: center; background: #2c2f33; color: white; }
-    .bot-avatar, .user-avatar { width: 100px; border-radius: 50%; margin: 10px; }
-    select, button { padding: 10px; margin-top: 20px; font-size: 16px; border-radius: 8px; }
-    .invite-btn { background-color: green; color: white; border: none; cursor: pointer; }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      background-color: #f0f0f0;
+      padding: 30px;
+      direction: rtl;
+    }
+    img {
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+    }
+    select, button {
+      margin-top: 20px;
+      padding: 10px 15px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: none;
+    }
+    button {
+      background-color: #2ecc71;
+      color: white;
+      cursor: pointer;
+    }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <h1 id="bot-name">ProBot</h1>
-  <img id="bot-avatar" src="https://cdn.discordapp.com/avatars/1360270113001177118/60508c6d47fe0270eb9a5d8783cb0538.webp?size=1024" class="bot-avatar" />
-  <img id="user-avatar" src="https://cdn.discordapp.com/embed/avatars/1.png" class="user-avatar" />
-  <h2>اختر سيرفر لإضافة البوت</h2>
+  <div id="login-section">
+    <h1>مرحباً بك في ProBot</h1>
+    <a href="https://discord.com/oauth2/authorize?client_id=1360270113001177118&redirect_uri=https%3A%2F%2Ftubular-parfait-58a9e4.netlify.app%2F&response_type=token&scope=identify%20guilds">
+      <button>تسجيل الدخول عبر ديسكورد</button>
+    </a>
+  </div>
 
-  <form id="invite-form">
-    <select id="guild-select">
-      <option value="123">سيرفر 1</option>
-      <option value="456">سيرفر 2</option>
-    </select><br />
-    <button class="invite-btn" type="submit">دعوة البوت</button>
-  </form>
+  <div id="app-section" class="hidden">
+    <img id="bot-avatar" src="https://cdn.discordapp.com/avatars/1360270113001177118/60508c6d47fe0270eb9a5d8783cb0538.webp?size=1024" alt="Bot">
+    <img id="user-avatar" src="" alt="User">
+    <h2 id="username"></h2>
+    <select id="guilds-select"></select>
+  </div>
 
   <script>
-    const BOT_CLIENT_ID = "1360270113001177118";
-    const BOT_TOKEN = "MTM2MDI3MDExMzAwMTE3NzExOA.G4RNS7.rY9CrwvX8ULAedi4RKQ73mBvNxGFQVEWJDVyEA";
+    async function fetchDiscordData(token) {
+      const [userRes, guildsRes] = await Promise.all([
+        fetch('https://discord.com/api/users/@me', {
+          headers: { Authorization: `Bearer ${token}` }
+        }),
+        fetch('https://discord.com/api/users/@me/guilds', {
+          headers: { Authorization: `Bearer ${token}` }
+        })
+      ]);
 
-    document.getElementById("invite-form").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const guildId = document.getElementById("guild-select").value;
-      const url = "https://discord.com/oauth2/authorize?client_id=" + BOT_CLIENT_ID + "&scope=bot%20applications.commands&permissions=8&guild_id=" + guildId;
-      window.open(url, "_blank");
-    });
+      const user = await userRes.json();
+      const guilds = await guildsRes.json();
+
+      document.getElementById("login-section").classList.add("hidden");
+      document.getElementById("app-section").classList.remove("hidden");
+
+      document.getElementById("user-avatar").src = `https://cdn.discordapp.com/avatars/${user.id}/${user.avatar}.png?size=1024`;
+      document.getElementById("username").textContent = user.username + "#" + user.discriminator;
+
+      const select = document.getElementById("guilds-select");
+      guilds.forEach(guild => {
+        if ((guild.permissions & 0x8) === 0x8) { // Admin check
+          const option = document.createElement("option");
+          option.value = guild.id;
+          option.textContent = guild.name;
+          select.appendChild(option);
+        }
+      });
+    }
+
+    // استخراج التوكن من الرابط بعد تسجيل الدخول
+    const hash = window.location.hash;
+    if (hash && hash.includes("access_token")) {
+      const params = new URLSearchParams(hash.substring(1));
+      const token = params.get("access_token");
+      fetchDiscordData(token);
+    }
   </script>
 </body>
 </html>
+"""
+
+# حفظ الملف
+file_path = "/mnt/data/index.html"
+with open(file_path, "w", encoding="utf-8") as f:
+    f.write(html_code)
+
+file_path
+
