--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
-# إنشاء ملف HTML واحد بناءً على طلب المستخدم
-html_code = """
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تسجيل الدخول - ProBot</title>
   <style>
     body {
       font-family: sans-serif;
       text-align: center;
-      background-color: #f0f0f0;
+      background-color: #000; /* خلفية سوداء */
+      color: #fff; /* نص أبيض */
       padding: 30px;
       direction: rtl;
     }
-    img {
-      border-radius: 50%;
-      width: 100px;
-      height: 100px;
-    }
-    select, button {
+    button {
       margin-top: 20px;
       padding: 10px 15px;
       font-size: 16px;
       border-radius: 8px;
       border: none;
-    }
-    button {
       background-color: #2ecc71;
       color: white;
       cursor: pointer;
+    }
+    select {
+      margin-top: 20px;
+      padding: 10px 15px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: none;
     }
     .hidden {
       display: none;
@@ -45,13 +44,16 @@ html_code = """
   </div>
 
   <div id="app-section" class="hidden">
-    <img id="bot-avatar" src="https://cdn.discordapp.com/avatars/1360270113001177118/60508c6d47fe0270eb9a5d8783cb0538.webp?size=1024" alt="Bot">
-    <img id="user-avatar" src="" alt="User">
+    <img id="bot-avatar" src="https://cdn.discordapp.com/avatars/1360270113001177118/60508c6d47fe0270eb9a5d8783cb0538.webp?size=1024" alt="Bot" style="border-radius: 50%; width: 100px; height: 100px;" />
+    <img id="user-avatar" src="" alt="User" style="border-radius: 50%; width: 100px; height: 100px;" />
     <h2 id="username"></h2>
     <select id="guilds-select"></select>
   </div>
 
   <script>
+    // صفحة أخرى (مثلاً صفحة داخل نفس الموقع)
+    const registeredPage = "registered.html";
+
     async function fetchDiscordData(token) {
       const [userRes, guildsRes] = await Promise.all([
         fetch('https://discord.com/api/users/@me', {
@@ -62,7 +64,22 @@ html_code = """
         })
       ]);
 
+      if (!userRes.ok) {
+        alert('فشل في جلب بيانات المستخدم.');
+        return;
+      }
       const user = await userRes.json();
+
+      // تحقق "هل المستخدم مسجل" - هنا مثال بسيط:
+      // افترض إننا نعتبر المستخدم مسجل إذا كان الـ user.id مخزن في localStorage
+      const registeredUsers = JSON.parse(localStorage.getItem("registeredUsers") || "[]");
+      if (registeredUsers.includes(user.id)) {
+        // إذا مسجل، نوجهه للصفحة الثانية
+        window.location.href = registeredPage;
+        return;
+      }
+
+      // غير مسجل، نظهر المعلومات
       const guilds = await guildsRes.json();
 
       document.getElementById("login-section").classList.add("hidden");
@@ -73,7 +90,7 @@ html_code = """
 
       const select = document.getElementById("guilds-select");
       guilds.forEach(guild => {
-        if ((guild.permissions & 0x8) === 0x8) { // Admin check
+        if ((guild.permissions & 0x8) === 0x8) { // صلاحية الأدمن
           const option = document.createElement("option");
           option.value = guild.id;
           option.textContent = guild.name;
@@ -92,12 +109,3 @@ html_code = """
   </script>
 </body>
 </html>
-"""
-
-# حفظ الملف
-file_path = "/mnt/data/index.html"
-with open(file_path, "w", encoding="utf-8") as f:
-    f.write(html_code)
-
-file_path
-
